# pixoo-mcp

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml  requirements-server.txt
_working/: 2026-04-19-state-and-comparison.md
examples/: ascii_previews.txt  clock.py  dashboard.py  frame_limit.py  game_of_life.py  pixel_art.py  weather_card.py
pixoo/: PROTOCOL.md  __init__.py  __main__.py  server.py
