[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "pixoo"
version = "0.1.0"
description = "Python library and MCP server for Divoom Pixoo LED displays"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "requests",
]

[project.optional-dependencies]
images = ["Pillow"]
server = [
    "Pillow",
    "fastmcp",
    "httpx",
]

[project.scripts]
pixoo = "pixoo.__main__:main"
